--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -93,7 +93,7 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">FUERA PONIENTE</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -104,7 +104,7 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">FUERA SUR</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -115,7 +115,7 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">FUERA SUR OESTE</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -126,7 +126,7 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">FUERA SUR PONIENTE</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -137,9 +137,9 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">ZONA 1</a></td>.
                             <td>215.1</td>
-                            <td>314.1</td>
+                            <td>774.1</td>
                             <td>117.1</td>
                             <td>415.1</td>
                             <td>691.1</td>
@@ -148,9 +148,75 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">ZONA 2</a></td>.
+                            <td>215.1</td>
+                            <td>714.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>121.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 3</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>1225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 4</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>119.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>925.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 5</a></td>.
+                            <td>715.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>994.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 6</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>17.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 7</a></td>.
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>187.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 8</a></td>.
+                            <td>215.1</td>
+                            <td>214.1</td>
                             <td>117.1</td>
                             <td>415.1</td>
                             <td>691.1</td>
@@ -159,76 +225,10 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td><a href="carga_todos.html">ZONA 9</a></td>.
                             <td>215.1</td>
                             <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
+                            <td>717.1</td>
                             <td>415.1</td>
                             <td>691.1</td>
                             <td>789.1</td>
