--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -82,84 +82,7 @@
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA PONIENTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA SUR</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA SUR OESTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">FUERA SUR PONIENTE</a></td>.
-                            <td>215.1</td>
-                            <td>314.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 1</a></td>.
-                            <td>215.1</td>
-                            <td>774.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>691.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 2</a></td>.
-                            <td>215.1</td>
-                            <td>714.1</td>
-                            <td>117.1</td>
-                            <td>415.1</td>
-                            <td>121.1</td>
-                            <td>789.1</td>
-                            <td>144.1</td>
-                            <td>3225.5</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 3</a></td>.
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -170,7 +93,84 @@
                             <td>1225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 4</a></td>.
+                            <td><a href="carga_todos.html">FUERA PONIENTE</a></td>
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>9225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA SUR</a></td>
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>1985.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA SUR OESTE</a></td>
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">FUERA SUR PONIENTE</a></td>
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>1411.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 1</a></td>
+                            <td>215.1</td>
+                            <td>774.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>2698.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 2</a></td>
+                            <td>215.1</td>
+                            <td>714.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>121.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>3225.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 3</a></td>
+                            <td>215.1</td>
+                            <td>314.1</td>
+                            <td>117.1</td>
+                            <td>415.1</td>
+                            <td>691.1</td>
+                            <td>789.1</td>
+                            <td>144.1</td>
+                            <td>1477.5</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">ZONA 4</a></td>
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>119.1</td>
@@ -181,7 +181,7 @@
                             <td>925.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 5</a></td>.
+                            <td><a href="carga_todos.html">ZONA 5</a></td>
                             <td>715.1</td>
                             <td>314.1</td>
                             <td>117.1</td>
@@ -189,10 +189,10 @@
                             <td>691.1</td>
                             <td>789.1</td>
                             <td>144.1</td>
-                            <td>3225.5</td>
+                            <td>1455.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 6</a></td>.
+                            <td><a href="carga_todos.html">ZONA 6</a></td>
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>17.1</td>
@@ -200,10 +200,10 @@
                             <td>691.1</td>
                             <td>789.1</td>
                             <td>144.1</td>
-                            <td>3225.5</td>
+                            <td>4584.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 7</a></td>.
+                            <td><a href="carga_todos.html">ZONA 7</a></td>
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>187.1</td>
@@ -211,10 +211,10 @@
                             <td>691.1</td>
                             <td>789.1</td>
                             <td>144.1</td>
-                            <td>3225.5</td>
+                            <td>7725.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 8</a></td>.
+                            <td><a href="carga_todos.html">ZONA 8</a></td>
                             <td>215.1</td>
                             <td>214.1</td>
                             <td>117.1</td>
@@ -225,7 +225,7 @@
                             <td>3225.5</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">ZONA 9</a></td>.
+                            <td><a href="carga_todos.html">ZONA 9</a></td>
                             <td>215.1</td>
                             <td>314.1</td>
                             <td>717.1</td>
@@ -233,7 +233,7 @@
                             <td>691.1</td>
                             <td>789.1</td>
                             <td>144.1</td>
-                            <td>3225.5</td>
+                            <td>1525.5</td>
                         </tr>
 
                         </tbody>
