--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -41,6 +41,16 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-md-3 control-label">Destino</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>Zona 9</option>
+                                    <option>Fuera Poniente</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
                             <div class="col-md-9">
                                 <button type="submit" class="btn btn-sm btn-success">Buscar</button>
