--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -178,6 +178,12 @@
 
                         </ul>
                     </li>
+                    <li class="has-sub" ng-class="{active:$state.includes('app.gestion.servicio')}">
+                        <a href="javascript:;"><b class="caret pull-right"></b>Servicio</a>
+                        <ul class="sub-menu">
+                            <li ui-sref-active="active"><a ui-sref="app.gestion.servicio.despacho">Crear Servicio</a></li>
+                        </ul>
+                    </li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.gestion.viaje')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Viaje</a>
                         <ul class="sub-menu">
