--- a/views/Consulta/Viajes/troncal.html
+++ b/views/Consulta/Viajes/troncal.html
@@ -121,7 +121,7 @@
                             <th>Tipo de Camión</th>
                             <th>Origen</th>
                             <th>Destino</th>
-                            <th>Estado Via.</th>
+                            <th>Estado Viaje</th>
 
                         </tr>
                         </thead>
