--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -32,7 +32,7 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Numero de Viaje</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="10021" />
+                                <input type="text" class="form-control" placeholder="210021" />
                             </div>
                             <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
                             <div class="col-md-2">
@@ -122,7 +122,7 @@
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Estado Viaje</th>
-
+                            <th>Servicio</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -134,7 +134,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>ANULADO</td>
-
+                            <td><button class="btn btn-icon  " ><i class="fa-plus-square-o"></i></button></td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
