--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -134,7 +134,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>ANULADO</td>
-                            <td><button class="btn btn-icon  " ><i class="fa-plus-square-o"></i></button></td>
+                            <td><button class="btn btn-icon  fa-plus-square-o" ></button></td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
