--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -134,7 +134,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>ANULADO</td>
-                            <td><a href="crear.html" class="btn btn-info m-r-5" ><i class="fa-plus-square-o"></i></a> </td>
+                            <td><a href="crear.html" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
