--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -134,7 +134,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>ANULADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
@@ -144,7 +144,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>EN VIAJE</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
@@ -154,7 +154,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>CREADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle  m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
@@ -164,7 +164,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
                             <td>CERRADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214224</a></td>
@@ -174,7 +174,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>ESPERANDO SALIDA</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214225</a></td>
