--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -184,7 +184,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
                             <td>EN VIAJE</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info m-r-5" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         </tbody>
                     </table>
