--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -76,14 +76,7 @@
                                     <option>Recibido</option>
                                 </select>
                             </div>
-                            <label class="col-md-2 control-label">Estado Facturacion</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>Todos</option>
-                                    <option>Facturado</option>
-                                    <option>Recibido</option>
-                                </select>
-                            </div>
+
                         </div>
 
                         <div class="form-group">
@@ -133,18 +126,18 @@
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
-                            <td>ANULADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td>EN VIAJE</td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
                             <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRANSPORTES PIPAU</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>EN VIAJE</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
@@ -154,27 +147,27 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>CREADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle  m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214223</a></td>
                             <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRANSPORTES TRONCO</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
-                            <td>CERRADO</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td>ESPERANDO SALIDA</td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214224</a></td>
                             <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRANSPORTES EXPRESS</td>
                             <td>CM40</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>ESPERANDO SALIDA</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214225</a></td>
@@ -184,7 +177,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
                             <td>EN VIAJE</td>
-                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-info btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
+                            <td><a ui-sref="app.gestion.servicio.crear" class="btn btn-success btn-circle m-r-2" ><i class="fa fa-plus-square"></i></a> </td>
                         </tr>
                         </tbody>
                     </table>
