--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -27,12 +27,12 @@
                     <h4 class="panel-title">Formulario Creación</h4>
                 </div>
                 <div class="panel-body">
-                    <label class="col-md-1 control-label">Transportista</label>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" text="TRANSPORTES PIPAU" ng-model="prov_nombre" disabled />
+                    <div class="form-group">
+                        <label class="col-md-1 control-label">Transportista</label>
+                        <div class="col-md-3">
+                            <input type="text" class="form-control" text="TRANSPORTES PIPAU" ng-model="prov_nombre" disabled />
+                        </div>
                     </div>
-
-
                     <div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Inicio</label>
                             <div class="col-md-6">
