--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -30,7 +30,7 @@
                     <div class="form-group">
                         <label class="col-md-1 control-label">Transportista</label>
                         <div class="col-md-3">
-                            <input type="text" class="form-control" text="TRANSPORTES PIPAU" ng-model="prov_nombre" disabled />
+                            <input type="text" class="form-control" ng-model="prov_nombre" disabled />
                         </div>
                     </div>
                     <div class="form-group">
