--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -27,13 +27,20 @@
                     <h4 class="panel-title">Formulario Creación</h4>
                 </div>
                 <div class="panel-body">
-                    <div class="form-group">
-                        <label class="col-md-1 control-label">Transportista</label>
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" ng-model="prov_nombre" disabled />
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Proveedor</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>12 Transportes Montes</option>
+                                    <option>2 Transportes Pipau</option>
+                                    <option>3 Transportes del Pacifico</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
+
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Inicio</label>
                             <div class="col-md-6">
                                 <p class="input-group">
