--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -29,15 +29,11 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Proveedor</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>12 Transportes Montes</option>
-                                    <option>2 Transportes Pipau</option>
-                                    <option>3 Transportes del Pacifico</option>
-                                    <option>Otro</option>
-                                </select>
+                            <label class="col-md-3 control-label">Nombre</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
                             </div>
+
                         </div>
 
                         <div class="form-group">
