--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -29,9 +29,9 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Nombre</label>
+                            <label class="col-md-3 control-label">Transportista</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="Dolar Estadounidense" ng-model="monet_nombre" />
+                                <input type="text" class="form-control" placeholder="TRANSPORTES PIPAU" ng-model="monet_nombre" disabled/>
                             </div>
 
                         </div>
