--- a/views/Gestion/Servicio/crear.html
+++ b/views/Gestion/Servicio/crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="40501_Controller">
+<div ng-controller="30702_Controller">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a ui-sref="app.dashboard">Home</a></li>
@@ -29,48 +29,27 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Transportista</label>
+                            <label class="col-md-3 control-label">Despacho</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="TRANSPORTES PIPAU" ng-model="monet_nombre" disabled/>
+                                <input type="text" class="form-control" placeholder="200145" ng-model="monet_nombre" disabled/>
                             </div>
 
                         </div>
 
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Fecha de Inicio</label>
-                            <div class="col-md-6">
-                                <p class="input-group">
-                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                                    <span class="input-group-btn">
-                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-                                     </span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Fecha de Termino</label>
-                            <div class="col-md-6">
-                                <p class="input-group">
-                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                                    <span class="input-group-btn">
-                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-                                     </span>
-                                </p>
-                            </div>
-                        </div>
 
 
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Origen</label>
+                            <label class="col-md-3 control-label">Tipo de Servicio</label>
                             <div class="col-md-9">
                                 <select class="form-control">
-                                    <option>55 - CD - SANTIAGO</option>
-                                    <option>59 - CD - ANTOFAGASTA</option>
+                                    <option>1 - SOB - SOBREESTADIA</option>
+                                    <option>2 - GRU - GRUA</option>
                                 </select>
                             </div>
                         </div>
+
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Destino</label>
+                            <label class="col-md-3 control-label">Responsable</label>
                             <div class="col-md-9">
                                 <select class="form-control">
                                     <option>13 - TI - TALCA</option>
@@ -79,31 +58,19 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Tipo de Vehiculo</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>1 - CM35</option>
-                                    <option>2 - CM40</option>
-
-                                </select>
+                            <label class="col-md-3 control-label">Unidades </label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="4" ng-model="monet_nombre" />
                             </div>
+
                         </div>
 
 
 
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Estado</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>HABILITADA</option>
-                                    <option>SUSPENDIDA</option>
-                                </select>
-                            </div>
-                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones : </label>
                             <div class="col-md-9">
-                                <button type="submit" class="btn btn-sm btn-success" ng-click = "PRO_AGR_TARF_TRON()">Guardar</button>
+                                <button type="submit" class="btn btn-sm btn-success" ng-click = "PRO_AGR_SERV()">Guardar</button>
                                 <button type="submit" class="btn btn-sm btn-info" ng-click="PRO_CANC()">Cancelar</button>
                             </div>
                         </div>
