--- a/views/Gestion/Servicio/despacho.html
+++ b/views/Gestion/Servicio/despacho.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-info" >Cancelar</button>
+                            <button class="btn btn-info" ng-click="PRO_CANC()" >Cancelar</button>
                         </p>
                     </div>
                 </div>
